@@ -34,7 +34,7 @@ public class MegaRolesAllowedInterceptor {
         if (isInRole(userContext.getUser().getRoles(), allowedRoles)) {
             return invocationContext.proceed();
         } else {
-            throw new ForbiddenException(String.format("User has insufficient role %s", userContext.getUser()
+            throw new ForbiddenException("User has insufficient role %s".formatted(userContext.getUser()
                     .getRoles()));
         }
     }
