@@ -70,8 +70,8 @@ class WarningCalculatorsManagerTest {
     }
 
     private ProjectTimeEntry projectTimeEntryFor(final int startHour, final int startMinute, final int endHour,
-                                                 final int endMinute, final String process) {
-        return projectTimeEntryFor(1, startHour, startMinute, 1, endHour, endMinute, WorkingLocation.MAIN, process);
+                                                 final int endMinute) {
+        return projectTimeEntryFor(1, startHour, startMinute, 1, endHour, endMinute, WorkingLocation.MAIN, WarningCalculatorsManagerTest.DOCTOR_APPOINTMENT);
     }
 
     private ProjectTimeEntry projectTimeEntryFor(final int startDay, final int startHour, final int startMinute, final int endDay, final int endHour,
@@ -88,15 +88,14 @@ class WarningCalculatorsManagerTest {
 
     private JourneyTimeEntry journeyTimeEntryFor(final int day, final int startHour, final int endHour, JourneyDirection journeyDirection,
                                                  WorkingLocation workingLocation, Vehicle vehicle) {
-        return journeyTimeEntryFor(day, startHour, 0, day, endHour, 0, journeyDirection, workingLocation, vehicle);
+        return journeyTimeEntryFor(day, startHour, day, endHour, journeyDirection, workingLocation, vehicle);
     }
 
-    private JourneyTimeEntry journeyTimeEntryFor(final int startDay, final int startHour, final int startMinute, final int endDay, final int endHour,
-                                                 final int endMinute,
+    private JourneyTimeEntry journeyTimeEntryFor(final int startDay, final int startHour, final int endDay, final int endHour,
                                                  JourneyDirection journeyDirection, WorkingLocation workingLocation, Vehicle vehicle) {
         return JourneyTimeEntry.builder()
-                .fromTime(LocalDateTime.of(2020, 1, startDay, startHour, startMinute))
-                .toTime(LocalDateTime.of(2020, 1, endDay, endHour, endMinute))
+                .fromTime(LocalDateTime.of(2020, 1, startDay, startHour, 0))
+                .toTime(LocalDateTime.of(2020, 1, endDay, endHour, 0))
                 .task(Task.REISEN)
                 .journeyDirection(journeyDirection)
                 .workingLocation(workingLocation)
@@ -144,7 +143,7 @@ class WarningCalculatorsManagerTest {
 
         final List<TimeWarning> warnings = calculator.determineTimeWarnings(List.of(start, end));
 
-        assertThat(warnings.get(0).getWarnings().get(0)).isEqualTo("WARNING_STRING");
+        assertThat(warnings.getFirst().getWarnings().getFirst()).isEqualTo("WARNING_STRING");
     }
 
     @Test
@@ -168,48 +167,48 @@ class WarningCalculatorsManagerTest {
                 .determineJourneyWarnings(List.of(journeyTimeEntryFour, projectEntryThree, projectEntryTwo, journeyTimeEntryOne));
 
         assertThat(warnings).hasSize(1);
-        assertThat(warnings.get(0).getWarningTypes()).hasSize(1);
-        assertThat(warnings.get(0).getWarningTypes().get(0)).isEqualTo(JourneyWarningType.INVALID_WORKING_LOCATION);
+        assertThat(warnings.getFirst().getWarningTypes()).hasSize(1);
+        assertThat(warnings.getFirst().getWarningTypes().getFirst()).isEqualTo(JourneyWarningType.INVALID_WORKING_LOCATION);
     }
 
     @Test
     void whenDoctorBefore830_thenError() {
-        final ProjectTimeEntry pte = projectTimeEntryFor(7, 25, 7, 45, DOCTOR_APPOINTMENT);
+        final ProjectTimeEntry pte = projectTimeEntryFor(7, 25, 7, 45);
 
         final List<TimeWarning> result = calculator.determineTimeWarnings(List.of(pte));
 
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getWarnings().get(0)).isEqualTo(DOCTOR_APPOINTMENT);
+        assertThat(result.getFirst().getWarnings().getFirst()).isEqualTo(DOCTOR_APPOINTMENT);
     }
 
     @Test
     void whenDoctorBetween12_1230_thenErrorv1() {
-        final ProjectTimeEntry pte = projectTimeEntryFor(12, 15, 13, 45, DOCTOR_APPOINTMENT);
+        final ProjectTimeEntry pte = projectTimeEntryFor(12, 15, 13, 45);
 
         final List<TimeWarning> result = calculator.determineTimeWarnings(List.of(pte));
 
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getWarnings().get(0)).isEqualTo(DOCTOR_APPOINTMENT);
+        assertThat(result.getFirst().getWarnings().getFirst()).isEqualTo(DOCTOR_APPOINTMENT);
     }
 
     @Test
     void whenDoctorBetween12_1230_thenErrorv2() {
-        final ProjectTimeEntry pte = projectTimeEntryFor(7, 45, 12, 25, DOCTOR_APPOINTMENT);
+        final ProjectTimeEntry pte = projectTimeEntryFor(7, 45, 12, 25);
 
         final List<TimeWarning> result = calculator.determineTimeWarnings(List.of(pte));
 
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getWarnings().get(0)).isEqualTo(DOCTOR_APPOINTMENT);
+        assertThat(result.getFirst().getWarnings().getFirst()).isEqualTo(DOCTOR_APPOINTMENT);
     }
 
     @Test
     void whenDoctorAfter17_thenError() {
-        final ProjectTimeEntry pte = projectTimeEntryFor(15, 25, 17, 45, DOCTOR_APPOINTMENT);
+        final ProjectTimeEntry pte = projectTimeEntryFor(15, 25, 17, 45);
 
         final List<TimeWarning> result = calculator.determineTimeWarnings(List.of(pte));
 
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getWarnings().get(0)).isEqualTo(DOCTOR_APPOINTMENT);
+        assertThat(result.getFirst().getWarnings().getFirst()).isEqualTo(DOCTOR_APPOINTMENT);
     }
 
     @Test
@@ -218,7 +217,7 @@ class WarningCalculatorsManagerTest {
 
         final List<TimeWarning> result = calculator.determineTimeWarnings(List.of(pte));
 
-        assertThat(result).hasSize(0);
+        assertThat(result).isEmpty();
     }
 
 
@@ -228,27 +227,27 @@ class WarningCalculatorsManagerTest {
 
         final List<TimeWarning> result = calculator.determineTimeWarnings(List.of(pte));
 
-        assertThat(result).hasSize(0);
+        assertThat(result).isEmpty();
     }
 
     @Test
     void whenDoctorSpanOverMidday_thenError() {
-        final ProjectTimeEntry pte = projectTimeEntryFor(8, 30, 17, 0, DOCTOR_APPOINTMENT);
+        final ProjectTimeEntry pte = projectTimeEntryFor(8, 30, 17, 0);
 
         final List<TimeWarning> result = calculator.determineTimeWarnings(List.of(pte));
 
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getWarnings().get(0)).isEqualTo(DOCTOR_APPOINTMENT);
+        assertThat(result.getFirst().getWarnings().getFirst()).isEqualTo(DOCTOR_APPOINTMENT);
     }
 
     @Test
     void whenDoctorSpanOverMidday_thenErrorv2() {
-        final ProjectTimeEntry pte = projectTimeEntryFor(11, 59, 12, 31, DOCTOR_APPOINTMENT);
+        final ProjectTimeEntry pte = projectTimeEntryFor(11, 59, 12, 31);
 
         final List<TimeWarning> result = calculator.determineTimeWarnings(List.of(pte));
 
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getWarnings().get(0)).isEqualTo(DOCTOR_APPOINTMENT);
+        assertThat(result.getFirst().getWarnings().getFirst()).isEqualTo(DOCTOR_APPOINTMENT);
     }
 
     @Test
@@ -279,7 +278,7 @@ class WarningCalculatorsManagerTest {
                 .determineTimeWarnings(List.of(secondDaytimeEntryTwo, secondDaytimeEntryOne, firstDaytimeEntryTwo, firstDaytimeEntryOne));
 
         assertThat(warnings).hasSize(1);
-        assertThat(warnings.get(0).getDate()).isEqualTo(firstDaytimeEntryOne.getDate());
+        assertThat(warnings.getFirst().getDate()).isEqualTo(firstDaytimeEntryOne.getDate());
     }
 
     @Test
@@ -293,8 +292,8 @@ class WarningCalculatorsManagerTest {
                 .determineTimeWarnings(List.of(firstDaytimeEntryOne, firstDaytimeEntryTwo, secondDaytimeEntryOne, secondDaytimeEntryTwo));
 
         assertThat(warnings).hasSize(1);
-        assertThat(warnings.get(0).getDate()).isEqualTo(firstDaytimeEntryOne.getDate());
-        assertThat(warnings.get(0).getMissingBreakTime()).isEqualTo(0.25);
+        assertThat(warnings.getFirst().getDate()).isEqualTo(firstDaytimeEntryOne.getDate());
+        assertThat(warnings.getFirst().getMissingBreakTime()).isEqualTo(0.25);
     }
 
     @Test
@@ -308,8 +307,8 @@ class WarningCalculatorsManagerTest {
                 .determineTimeWarnings(List.of(firstDaytimeEntryOne, firstDaytimeEntryTwo, secondDaytimeEntryOne, secondDaytimeEntryTwo));
 
         assertThat(warnings).hasSize(1);
-        assertThat(warnings.get(0).getDate()).isEqualTo(secondDaytimeEntryOne.getDate());
-        assertThat(warnings.get(0).getMissingBreakTime()).isEqualTo(0.25);
+        assertThat(warnings.getFirst().getDate()).isEqualTo(secondDaytimeEntryOne.getDate());
+        assertThat(warnings.getFirst().getMissingBreakTime()).isEqualTo(0.25);
     }
 
     @Test
@@ -336,7 +335,7 @@ class WarningCalculatorsManagerTest {
                 .determineTimeWarnings(List.of(thirdDaytimeEntry, secondDaytimeEntryTwo, secondDaytimeEntryOne, firstDaytimeEntry));
 
         assertThat(warnings).hasSize(1);
-        assertThat(warnings.get(0).getDate()).isEqualTo(secondDaytimeEntryOne.getDate());
+        assertThat(warnings.getFirst().getDate()).isEqualTo(secondDaytimeEntryOne.getDate());
     }
 
     @Test
@@ -363,8 +362,8 @@ class WarningCalculatorsManagerTest {
                 .determineTimeWarnings(List.of(firstDaytimeEntry, secondDaytimeEntryOne, secondDaytimeEntryTwo, thirdDaytimeEntry));
 
         assertThat(warnings).hasSize(1);
-        assertThat(warnings.get(0).getDate()).isEqualTo(secondDaytimeEntryOne.getDate());
-        assertThat(warnings.get(0).getMissingRestTime()).isEqualTo(1);
+        assertThat(warnings.getFirst().getDate()).isEqualTo(secondDaytimeEntryOne.getDate());
+        assertThat(warnings.getFirst().getMissingRestTime()).isEqualTo(1);
     }
 
     @Test
@@ -378,8 +377,8 @@ class WarningCalculatorsManagerTest {
                 .determineTimeWarnings(List.of(firstDaytimeEntry, secondDaytimeEntryOne, secondDaytimeEntryTwo, thirdDaytimeEntry));
 
         assertThat(warnings).hasSize(1);
-        assertThat(warnings.get(0).getDate()).isEqualTo(thirdDaytimeEntry.getDate());
-        assertThat(warnings.get(0).getMissingRestTime()).isEqualTo(1);
+        assertThat(warnings.getFirst().getDate()).isEqualTo(thirdDaytimeEntry.getDate());
+        assertThat(warnings.getFirst().getMissingRestTime()).isEqualTo(1);
     }
 
     @Test
@@ -419,7 +418,7 @@ class WarningCalculatorsManagerTest {
                 .determineTimeWarnings(List.of(secondDayTimeEntryTwo, secondDayTimeEntryOne, firstDayTimeEntryTwo, firstDayTimeEntryOne));
 
         assertThat(warnings).hasSize(1);
-        assertThat(warnings.get(0).getDate()).isEqualTo(firstDayTimeEntryOne.getDate());
+        assertThat(warnings.getFirst().getDate()).isEqualTo(firstDayTimeEntryOne.getDate());
     }
 
     @Test
@@ -433,7 +432,7 @@ class WarningCalculatorsManagerTest {
                 .determineTimeWarnings(List.of(firstDayTimeEntryOne, firstDayTimeEntryTwo, secondDayTimeEntryOne, secondDayTimeEntryTwo));
 
         assertThat(warnings).hasSize(1);
-        assertThat(warnings.get(0).getExcessWorkTime()).isEqualTo(1);
+        assertThat(warnings.getFirst().getExcessWorkTime()).isEqualTo(1);
     }
 
     @Test
@@ -447,7 +446,7 @@ class WarningCalculatorsManagerTest {
                 .determineTimeWarnings(List.of(firstDayTimeEntryOne, firstDayTimeEntryTwo, secondDayTimeEntryOne, secondDayTimeEntryTwo));
 
         assertThat(warnings).hasSize(1);
-        assertThat(warnings.get(0).getExcessWorkTime()).isEqualTo(1);
+        assertThat(warnings.getFirst().getExcessWorkTime()).isEqualTo(1);
     }
 
     @Test
@@ -495,10 +494,9 @@ class WarningCalculatorsManagerTest {
         final List<TimeWarning> result = calculator.determineTimeWarnings(List.of(entryOne));
 
         assertThat(result)
-                .isNotEmpty();
-        assertThat(result.size())
-                .isEqualTo(1);
-        assertThat(result.get(0).getDate())
+                .isNotEmpty()
+                .hasSize(1);
+        assertThat(result.getFirst().getDate())
                 .isEqualTo(entryOne.getDate());
     }
 
@@ -509,10 +507,9 @@ class WarningCalculatorsManagerTest {
         final List<TimeWarning> result = calculator.determineTimeWarnings(List.of(entryOne));
 
         assertThat(result)
-                .isNotEmpty();
-        assertThat(result.size())
-                .isEqualTo(1);
-        assertThat(result.get(0).getDate())
+                .isNotEmpty()
+                .hasSize(1);
+        assertThat(result.getFirst().getDate())
                 .isEqualTo(entryOne.getDate());
     }
 
@@ -525,10 +522,9 @@ class WarningCalculatorsManagerTest {
         final List<TimeWarning> result = calculator.determineTimeWarnings(List.of(entryOne));
 
         assertThat(result)
-                .isNotEmpty();
-        assertThat(result.size())
-                .isEqualTo(1);
-        assertThat(result.get(0).getDate())
+                .isNotEmpty()
+                .hasSize(1);
+        assertThat(result.getFirst().getDate())
                 .isEqualTo(entryOne.getDate());
     }
 
@@ -541,10 +537,9 @@ class WarningCalculatorsManagerTest {
         final List<TimeWarning> result = calculator.determineTimeWarnings(List.of(entryOne));
 
         assertThat(result)
-                .isNotEmpty();
-        assertThat(result.size())
-                .isEqualTo(1);
-        assertThat(result.get(0).getDate())
+                .isNotEmpty()
+                .hasSize(1);
+        assertThat(result.getFirst().getDate())
                 .isEqualTo(entryOne.getDate());
     }
 
