@@ -220,9 +220,9 @@ class ZepRestServiceImplTest {
         List<ProjectHoursSummary> result = zepRestService.getAllProjectsForMonthAndEmployee(employee, YearMonth.of(2024, 6));
 
         assertThat(result).isNotNull();
-        assertThat(result.get(0).getBillableHoursSum()).isEqualTo(6.0);
-        assertThat(result.get(0).getNonBillableHoursSum()).isEqualTo(2.0);
-        assertThat(result.get(0).getChargeability()).isEqualTo(75.0);
+        assertThat(result.getFirst().getBillableHoursSum()).isEqualTo(6.0);
+        assertThat(result.getFirst().getNonBillableHoursSum()).isEqualTo(2.0);
+        assertThat(result.getFirst().getChargeability()).isEqualTo(75.0);
     }
 
     @Test
@@ -233,8 +233,8 @@ class ZepRestServiceImplTest {
 
         List<ProjectHoursSummary> result = zepRestService.getAllProjectsForMonthAndEmployee(employee, YearMonth.of(2024, 6));
 
-        assertThat(result).isNotNull();
-        assertThat(result.size()).isZero();
+        assertThat(result).isNotNull()
+                .isEmpty();
     }
 
     @Test
@@ -297,8 +297,9 @@ class ZepRestServiceImplTest {
 
         List<Employee> actual = zepRestService.getEmployees();
 
-        assertThat(actual).isNotNull();
-        assertThat(actual.size()).isEqualTo(2);
+        assertThat(actual)
+                .isNotNull()
+                .hasSize(2);
     }
 
     @Test
@@ -308,8 +309,9 @@ class ZepRestServiceImplTest {
 
         List<ProjectTime> actual = zepRestService.getProjectTimesForEmployeePerProject("ABC", YearMonth.now());
 
-        assertThat(actual).isNotNull();
-        assertThat(actual.isEmpty()).isTrue();
+        assertThat(actual)
+                .isNotNull()
+                .isEmpty();
     }
 
     @Test
@@ -330,8 +332,9 @@ class ZepRestServiceImplTest {
 
         List<ProjectTime> actual = zepRestService.getProjectTimesForEmployeePerProject("ABC", YearMonth.of(2024, 6));
 
-        assertThat(actual).isNotNull();
-        assertThat(actual.size()).isEqualTo(6);
+        assertThat(actual)
+                .isNotNull()
+                .hasSize(6);
     }
 
     @ParameterizedTest
@@ -404,10 +407,9 @@ class ZepRestServiceImplTest {
 
             List<AbsenceTime> actual = zepRestService.getAbsenceForEmployee(employee, YearMonth.of(2024, 5));
 
-            assertThat(actual).isNotNull();
-            assertThat(actual.size()).isEqualTo(2);
-
-
+            assertThat(actual)
+                    .isNotNull()
+                    .hasSize(2);
         }
     }
 
