@@ -17,8 +17,8 @@ class AbsenceTimeMapperTest {
     }
 
     @Test
-    void mapList_whenNull_thenReturnsNull() {
-        assertThat(AbsenceTimeMapper.mapList(null)).isNull();
+    void mapList_whenNull_thenReturnsEmptyList() {
+        assertThat(AbsenceTimeMapper.mapList(null)).isEmpty();
     }
 
 
@@ -71,7 +71,7 @@ class AbsenceTimeMapperTest {
         List<FehlzeitType> fztList = List.of(fztArr);
         List<AbsenceTime> atList = AbsenceTimeMapper.mapList(fztList);
 
-        assertThat(atList.get(0).userId()).isEqualTo(fztList.get(0).getUserId());
+        assertThat(atList.getFirst().userId()).isEqualTo(fztList.getFirst().getUserId());
         assertThat(atList.get(1).userId()).isEqualTo(fztList.get(1).getUserId());
     }
 
