@@ -55,8 +55,8 @@ class ProjectTimeMapperTest {
     }
 
     @Test
-    void whenListIsNull_thenReturnNull() {
-        assertThat(ProjectTimeMapper.mapList(null)).isNull();
+    void whenListIsNull_thenReturnEmptyList() {
+        assertThat(ProjectTimeMapper.mapList(null)).isEmpty();
     }
 
     @Test
@@ -71,7 +71,7 @@ class ProjectTimeMapperTest {
         List<ProjektzeitType> pztList = List.of(fztArr);
         List<ProjectTime> ptList = ProjectTimeMapper.mapList(pztList);
 
-        assertThat(ptList.get(0).getUserId()).isEqualTo(pztList.get(0).getUserId());
+        assertThat(ptList.getFirst().getUserId()).isEqualTo(pztList.getFirst().getUserId());
         assertThat(ptList.get(1).getUserId()).isEqualTo(pztList.get(1).getUserId());
     }
 
