@@ -37,7 +37,7 @@ class ResponseParserTest {
         List<String> responseJsons = resourceFileService.getDirContents("projects");
 
         when(zepProjectRestClient.getProjects(eq(1)))
-                .thenReturn(Response.ok().entity(responseJsons.get(0)).build());
+                .thenReturn(Response.ok().entity(responseJsons.getFirst()).build());
         when(zepProjectRestClient.getProjects(eq(2)))
                 .thenReturn(Response.ok().entity(responseJsons.get(1)).build());
         when(zepProjectRestClient.getProjects(eq(3)))
@@ -49,7 +49,8 @@ class ResponseParserTest {
         List<ZepProject> projectList = responseParser.retrieveAll(page -> zepProjectRestClient.getProjects(page), ZepProject.class);
         List<String> projectNames = projectList.stream().map(ZepProject::name).peek(System.out::println).toList();
         System.out.println(projectNames);
-        Arrays.stream(names).forEach(name -> assertThat(projectNames.contains(name)).isTrue());
+        Arrays.stream(names)
+                .forEach(name -> assertThat(projectNames).contains(name));
     }
 
     @Test
@@ -140,7 +141,7 @@ class ResponseParserTest {
 
 
         when(zepProjectRestClient.getProjects(eq(1)))
-                .thenReturn(Response.ok().entity(responseJsons.get(0)).build());
+                .thenReturn(Response.ok().entity(responseJsons.getFirst()).build());
         when(zepProjectRestClient.getProjects(eq(2)))
                 .thenReturn(Response.ok().entity(responseJsons.get(1)).build());
         when(zepProjectRestClient.getProjects(eq(3)))
@@ -161,7 +162,7 @@ class ResponseParserTest {
 
 
         when(zepProjectRestClient.getProjects(eq(1)))
-                .thenReturn(Response.ok().entity(responseJsons.get(0)).build());
+                .thenReturn(Response.ok().entity(responseJsons.getFirst()).build());
         when(zepProjectRestClient.getProjects(eq(2)))
                 .thenReturn(Response.ok().entity(responseJsons.get(1)).build());
         when(zepProjectRestClient.getProjects(eq(3)))
